<resources>
    <string name="app_name">MeerkatConverter</string>
    <string name="title_coordinate_converter">Coordinate Converter</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_contact">Contact Us</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="interface1_title">Coordinate Conversion</string>
    <string name="interface2_title">Placeholder</string>
    <string name="interface3_title">History</string>
    <string name="convert_button">Convert</string>
    <string name="copy_all">Copy All</string>
    <string name="share_all">Share All</string>
    <string name="save_txt">Save as TXT</string>
    <string name="gps_location">GPS Location</string>
    <string name="about_content">MeerkatConverter\nVersion 1.0\nDeveloped by YourName</string>
    <string name="contact_email">contact@meerkatconverter.com</string>
    <string name="contact_phone">+1234567890</string>
    <string name="input_label">Input</string>
    <string name="output_label">Output</string>
    <string name="input_coordinates">Enter coordinates</string>
    <string-array name="coordinate_formats">
        <item>DD</item>
        <item>DM</item>
        <item>DMS</item>
        <item>UTM</item>
        <item>MGRS</item>
        <item>MRSO GDM2000</item>
        <item>BRSO GDM2000</item>
        <item>RSO KERTAU</item>
        <item>RSO TIMBALAI SABAH</item>
        <item>RSO TIMBALAI SARAWAK</item>
    </string-array>
</resources>
